feat: Add get clients endpoint
